[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Objects/gd/PortalHitboxArea2D.gd" type="Script" id=1]
[ext_resource path="res://assets_industrial_proj/industrial.v2.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen_New/FadeTransition.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("portalRed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_red"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("portalRed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("portalRed:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PortalScene" type="Node2D"]

[node name="PortalHitboxArea2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="PortalHitbox" type="CollisionShape2D" parent="PortalHitboxArea2D"]
shape = SubResource( 1 )

[node name="portal" type="Sprite" parent="PortalHitboxArea2D"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 78, 206, 36, 36 )

[node name="portalRed" type="Sprite" parent="PortalHitboxArea2D"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 131, 179, 26, 26 )

[node name="AnimationPlayerRed" type="AnimationPlayer" parent="PortalHitboxArea2D"]
autoplay = "start"
anims/start = SubResource( 2 )
anims/turn_red = SubResource( 3 )

[node name="TransitionLayer" type="CanvasLayer" parent="PortalHitboxArea2D"]
layer = 100

[node name="FadeInTransition" parent="PortalHitboxArea2D/TransitionLayer" instance=ExtResource( 3 )]
[connection signal="body_entered" from="PortalHitboxArea2D" to="PortalHitboxArea2D" method="_on_body_entered"]

[editable path="PortalHitboxArea2D/TransitionLayer/FadeInTransition"]
